# jax-window

./: .gitignore  README.md  pyproject.toml
jaxwindow/: __init__.py  mock.py  window.py
jpower/: __init__.py  mock.py  power.py  utils.py
nb/: anisotropic.ipynb  api.ipynb  bgs.py  debug_smooth.ipynb  infinite.ipynb  integral_constraint.ipynb  isotropic.ipynb  sparse_evaluation.ipynb  test_mean.ipynb  variance_reduction.ipynb  window_with_autodiff.ipynb
scripts/: bgs.py
tests/: test.py
