[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm>=6.2",
    "pip>=21.2",
]

[project]
name = "jaxwindow"
authors = [{name = "Arnaud de Mattia"}, {name = "Patrick McDonald"}]
description = "JAX-powered window function estimation"
version = "0.1.0"
dependencies = ["jax", "jaxwindow"]
readme = "README.md"
requires-python = ">=3.10"
urls = {Repository = "https://github.com/adematti/jax-window"}
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools]
packages = ["jaxwindow"]

